adicionar o nome dos livros mais avaliados

--- a/amazon-bestselling-books.ipynb
+++ b/amazon-bestselling-books.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
        "4     4.4  ₹209.00  "
       ]
      },
-     "execution_count": 97,
+     "execution_count": 126,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +247,7 @@
        "4     4.4  209.0      12.96  "
       ]
      },
-     "execution_count": 99,
+     "execution_count": 128,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [
     {
@@ -327,7 +327,7 @@
        "Text(0, 0.5, 'Autores')"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 139,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -356,6 +356,44 @@
     "ax.set_title('Autores mais bem avaliados')\n",
     "ax.set_xlabel('Média de avaliações')\n",
     "ax.set_ylabel('Autores')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Autor: A.C. Bhaktivendanta Swami Prabhupada, Livro Mais Avaliado: Shrimad Bhagwat Geeta Yatharoop (Hindi)\n",
+      "Autor: Francesc Miralles, Livro Mais Avaliado: Ikigai\n",
+      "Autor: Gagan Pratap Sir, Livro Mais Avaliado: Maths Concept King All Formulas and Theorum | Smart Tricks | Arithmetic & Advance Maths\n",
+      "Autor: Prerna Kain Srishti Agarwal, Livro Mais Avaliado: All In One English Core class 12th Based On Latest NCERT For CBSE Exams 2025 | Mind map in each chapter | Clear & Concise Theory | Intext & Chapter Exercises | Sample Question Papers\n",
+      "Autor: Sachin Jakhar, Livro Mais Avaliado: PW Calculus Core Fear No More Calculus Book By Sachin Jakhar For JEE Main & Advanced l Integral & Differential Calculus\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/0j/mzsbvxr16hq3ym0t1y60byph0000gn/T/ipykernel_54003/1788900510.py:3: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
+      "  top_books=data[data['Author Name'].isin(media_avaliacoes.head(5)['Author Name'])].groupby('Author Name').apply(lambda x: x.loc[x['Rating'].idxmax()])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Gráfico do nome desses livros \n",
+    "\n",
+    "top_books=data[data['Author Name'].isin(media_avaliacoes.head(5)['Author Name'])].groupby('Author Name').apply(lambda x: x.loc[x['Rating'].idxmax()])\n",
+    "\n",
+    "top_books_df = pd.DataFrame({\n",
+    "  'Author Name': top_books['Author Name'],\n",
+    "  'Livro mais bem Avaliado': top_books['Book Name']\n",
+    "})\n",
+    "\n",
+    "print(top_books_df)"
    ]
   }
  ],
