--- a/amazon-bestselling-books.ipynb
+++ b/amazon-bestselling-books.ipynb
@@ -360,38 +360,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Autor: A.C. Bhaktivendanta Swami Prabhupada, Livro Mais Avaliado: Shrimad Bhagwat Geeta Yatharoop (Hindi)\n",
-      "Autor: Francesc Miralles, Livro Mais Avaliado: Ikigai\n",
-      "Autor: Gagan Pratap Sir, Livro Mais Avaliado: Maths Concept King All Formulas and Theorum | Smart Tricks | Arithmetic & Advance Maths\n",
-      "Autor: Prerna Kain Srishti Agarwal, Livro Mais Avaliado: All In One English Core class 12th Based On Latest NCERT For CBSE Exams 2025 | Mind map in each chapter | Clear & Concise Theory | Intext & Chapter Exercises | Sample Question Papers\n",
-      "Autor: Sachin Jakhar, Livro Mais Avaliado: PW Calculus Core Fear No More Calculus Book By Sachin Jakhar For JEE Main & Advanced l Integral & Differential Calculus\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/0j/mzsbvxr16hq3ym0t1y60byph0000gn/T/ipykernel_54003/1788900510.py:3: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
-      "  top_books=data[data['Author Name'].isin(media_avaliacoes.head(5)['Author Name'])].groupby('Author Name').apply(lambda x: x.loc[x['Rating'].idxmax()])\n"
+      "                            Author Name                             Book Name\n",
+      "0  A.C. Bhaktivendanta Swami Prabhupada  A.C. Bhaktivendanta Swami Prabhupada\n",
+      "1                     Francesc Miralles                     Francesc Miralles\n",
+      "2                      Gagan Pratap Sir                      Gagan Pratap Sir\n",
+      "3           Prerna Kain Srishti Agarwal           Prerna Kain Srishti Agarwal\n",
+      "4                         Sachin Jakhar                         Sachin Jakhar\n"
      ]
     }
    ],
    "source": [
-    "# Gráfico do nome desses livros \n",
+    "# Nomes dos livros mais bem avaliados desses autores\n",
     "\n",
-    "top_books=data[data['Author Name'].isin(media_avaliacoes.head(5)['Author Name'])].groupby('Author Name').apply(lambda x: x.loc[x['Rating'].idxmax()])\n",
+    "top_books=data[data['Author Name'].isin(media_avaliacoes.head(5)['Author Name'])].groupby('Author Name')['Rating'].idxmax()\n",
     "\n",
     "top_books_df = pd.DataFrame({\n",
-    "  'Author Name': top_books['Author Name'],\n",
-    "  'Livro mais bem Avaliado': top_books['Book Name']\n",
+    "  'Author Name': top_books.index,\n",
+    "  'Book Name': top_books.index\n",
     "})\n",
+    "\n",
+    "top_books_df.reset_index(drop=True, inplace=True)\n",
     "\n",
     "print(top_books_df)"
    ]
