--- a/amazon-bestselling-books.ipynb
+++ b/amazon-bestselling-books.ipynb
@@ -594,7 +594,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A linha vermelha representa a média dos preços dos livros, que é R$20,50.\n",
+    "A linha vermelha representa a média dos preços dos livros, que é R$20,50. <br>\n",
     "Os pontos aumentam o tamanho conforme o valor aumenta. "
    ]
   },
@@ -666,7 +666,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A linha no meio da caixa significa a média.\n",
+    "A linha no meio da caixa significa a média. <br>\n",
     "Os pontos fora da caixa são os Outliers, ou seja, valores fora do padrão."
    ]
   }
